--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,11 +28,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.loader::after {
+  content: "";
+  animation: loading 1s infinite ease-in-out;
+}
+
+@keyframes loading {
+  0%{
+    content: "";
   }
-  to {
-    transform: rotate(360deg);
+  25%{
+    content: ".";
+  }
+  50%{
+    content: "..";
+  }
+  75%{
+    content: "...";
+  }
+  100% {
+    content: "";
   }
 }
